gcc/testsuite/g++.dg/parse/pr96258.C
// { dg-additional-options -fopenmp }
// { dg-require-effective-target fopenmp } 
#pragma omp declare simd // { dg-error "" }
